# claude-telegram-notificator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HOOKS.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yaml  pyproject.toml  setup.sh
hooks/: assistant-message-hook.sh  continue-hook.sh  install-hooks.sh  notification-hook.sh  stop-hook.sh  user-prompt-submit-hook.sh
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/bot/: __init__.py  telegram_bot.py
src/config/: __init__.py  projects.py  settings.py
src/models/: __init__.py  events.py
tests/: __init__.py  test_api.py
