[project]
name = "claude-telegram-notificator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.11.0",
    "python-telegram-bot>=22.5",
    "redis>=6.4.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]
